--- a/server/views/health/list.ejs
+++ b/server/views/health/list.ejs
@@ -9,7 +9,7 @@
         <div class = "row">
         <div class = "col-mid-offset-3 col-md-11">
         <a href = "/fitness/add" class="btn btn-primary" role="button">
-            <i class="fas fa-plus-circle"></i> ADD
+            <i class="fas fa-plus-circle"></i> Add Fitness Activities
         </a>
         <br>
         <br>
