--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -64,3 +64,8 @@ img:hover {
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
+
+.button2
+    {
+        background-color: #4CAF50
+    }
