--- a/server/views/health/add.ejs
+++ b/server/views/health/add.ejs
@@ -41,11 +41,11 @@
             name="to" required>
         </div>
 
-        <button class="btn-btn-primary button2" type="submit">
+        <button class="btn-btn-primary" type="submit">
             <i class="fas fa-edit"></i>Submit 
         </button>
 
-        <a href="/fitness" class="btn btn-warning button3">
+        <a href="/fitness" class="btn btn-warning">
             <i class="fas fa-undo"></i>Cancel</a>
         </form>
     </div>
