--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -67,10 +67,10 @@ img:hover {
 
 .btn-btn-primary
     {
-        background-color: #4CAF50
+        background-color: #4CAF50;
     }
 
 .btn-btn-warning
     {
-        background-color: #f44336
+        background-color: #f44336;
     }
