--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -71,3 +71,9 @@ img:hover {
         border-radius: 12px;
     }
 
+.btn btn-warning
+    {
+        background-color: #4CAF50;
+        border-radius: 12px;
+    }
+
