--- a/server/views/Partials/main_nav.ejs
+++ b/server/views/Partials/main_nav.ejs
@@ -22,7 +22,7 @@
         <% } else { %>
           <a class="nav-link" href="/fitness">
         <% } %>
-          <i class="fa-sharp fa-solid fa-heart"></i> Tracker</a>
+          <i class="fa-sharp fa-solid fa-bicycle"></i> Fitness Tracker</a>
         </li>  
 
 
