--- a/server/views/Partials/main_nav.ejs
+++ b/server/views/Partials/main_nav.ejs
@@ -17,7 +17,7 @@
         </li>  
 
           <li class="nav-item">
-        <% if (title == "Tracker") { %>
+        <% if (title == "Fitness Tracker") { %>
           <a class="nav-link active" href="/fitness">
         <% } else { %>
           <a class="nav-link" href="/fitness">
