--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -6,8 +6,8 @@
 </div>
 <div class="wrapper">
   <h3>CRUD Operation</h3>
-  <b><p>This website has a fitness tracker. You can create, read, update, and delete your fitness activities! </p>
-  <p>Click on the tracker on the main navigation to access the fitness trakcer.<br>
+  <b><p text = "center">This website has a fitness tracker. You can create, read, update, and delete your fitness activities! </p>
+  <p text = "center">Click on the tracker on the main navigation to access the fitness trakcer.<br>
   <a href = "/fitness">Or click here.</a></p></b>
   <img src="/images/crud.png" height="500" width="1000" class="center">
 </div>
