--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -5,9 +5,9 @@
   <h1 class="display-4"><%= title %></h1>
 </div>
 <div class="wrapper">
-  <h3>CRUD Operation</h3>
-  <b><p text = "center">This website has a fitness tracker. You can create, read, update, and delete your fitness activities! </p>
-  <p text = "center">Click on the tracker on the main navigation to access the fitness trakcer.<br>
+  <h3 style ="text-align: center;">CRUD Operation</h3>
+  <b><p style ="text-align: center;">This website has a fitness tracker. You can create, read, update, and delete your fitness activities! </p>
+  <p style ="text-align: center;">Click on the tracker on the main navigation to access the fitness trakcer.<br>
   <a href = "/fitness">Or click here.</a></p></b>
   <img src="/images/crud.png" height="500" width="1000" class="center">
 </div>
