--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -7,7 +7,7 @@
 <div class="wrapper">
   <h3 style ="text-align: center;">CRUD Operation</h3>
   <b><p style ="text-align: center;">This website has a fitness tracker. You can create, read, update, and delete your fitness activities! </p>
-  <p style ="text-align: center;">Click on the tracker on the main navigation to access the fitness trakcer.<br>
+  <p style ="text-align: center;">Click on the "Fitness Tracker" on the main navigation to access the fitness trakcer.<br>
   <a href = "/fitness">Or click here.</a></p></b>
   <img src="/images/crud.png" height="500" width="1000" class="center">
 </div>
