--- a/server/views/health/edit.ejs
+++ b/server/views/health/edit.ejs
@@ -50,7 +50,7 @@
         </div>
 
         <button class="btn-btn-primary" type="submit">
-            <i class="fas fa-edit"></i> Submit 
+            <i class="fa-solid fa-check-to-slot"></i> Submit 
         </button>
 
         <a href="/fitness" class="btn btn-warning">
