--- a/server/views/health/add.ejs
+++ b/server/views/health/add.ejs
@@ -42,7 +42,7 @@
         </div>
 
         <button class="btn-btn-primary" type="submit">
-            <i class="fas fa-edit"></i>Submit 
+            <i class="fa-solid fa-check-to-slot"></i>Submit 
         </button>
 
         <a href="/fitness" class="btn btn-warning">
