--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -5,20 +5,15 @@
   <h1 class="display-4"><%= title %></h1>
 </div>
 <div class="wrapper">
-  <h3 style ="text-align: center;">CRUD Operation</h3>
+  <u><h3 style ="text-align: center;">CRUD Operation</h3></u>
   <b><p style ="text-align: center;">This website has a fitness tracker. You can create, read, update, and delete your fitness activities! </p>
-  <p style ="text-align: center;">Click on the "Fitness Tracker" on the main navigation to access the fitness trakcer.<br>
-  <a href = "/fitness">Or click here.</a></p></b>
+  <p style ="text-align: center;">Click on the "Fitness Tracker" on the main navigation to access the fitness trakcer. <a href = "/fitness">Or click here.</a><br>
+  <br>Click here for <a href = "https://github.com/a5admian/Assignment-3">Github repository.</a></p></b>
   <img src="/images/crud.png" height="500" width="1000" class="center">
 </div>
 
 <%- include Partials/footer.ejs %>
 <%- include Partials/bottom_nav.ejs %>
-
-
-
-
-
 
 
 
